--- a/SfPdfViewerExtensions/SfPdfViewerExtensions.csproj
+++ b/SfPdfViewerExtensions/SfPdfViewerExtensions.csproj
@@ -1,14 +1,44 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>SfPdfViewer Extensions</Title>
+    <Authors>Mike Irving</Authors>
+    <Company />
+    <Copyright>(c) 2022 Mike Irving</Copyright>
+    <PackageProjectUrl>https://github.com/mikeirvingweb/SfPdfViewerExtensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mikeirvingweb/SfPdfViewerExtensions</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>syncfusion;syncfusion.xamarin;xamarin;xamarin.forms;android;ios;uwp;pdf;syncfusion.pdf;viewer</PackageTags>
+    <ApplicationIcon>SfPdfViewerExtensions.ico</ApplicationIcon>
+    <PackageIcon>SfPdfViewerExtensions.png</PackageIcon>
+    <Description>Useful Extensions for Syncfusion Xamarin.Forms PDF Viewer Component (SfPdfViewer), to get the size and orientation of the PDF, per page.</Description>
+    <Version>1.0.0.2</Version>
+    <PackageReadmeFile>NuGet-Readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="SfPdfViewerExtensions.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Syncfusion.Xamarin.SfPdfViewer" Version="20.2.0.45" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="NuGet-Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SfPdfViewerExtensions.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
